# send_bool_boost_mpi

./: CMakeLists.txt  CMakePresets.json  README.md  main.cpp  packages.txt
